// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeReconciler.reconcile inserts new expressions 1`] = `
"await page.click(\\"text=Log in\\");
// 🐺 create code here"
`;

exports[`CodeReconciler.reconcile updates the last expression 1`] = `
"await page.click(\\"#username\\");
// 🐺 create code here"
`;

exports[`CodeReconciler.reconcile updates the last expression after a step was removed (ex: paste) 1`] = `
"await page.click(\\"#username\\");
// 🐺 create code here"
`;
